# OMPBench

./: .gitignore  CMakeLists.txt  genm.cpp  matrix.hpp  mbench.cpp  plot_results.py  testm.cpp
